# clanker-soul

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
clanker_soul/: __init__.py  __main__.py  eventlog.py  felt_state.py  inference.py  overrides.py  pending.py  physics.py  plugin.py  presets.py  pulse.py  score.py  soul.py  tool_health.py
clanker_soul/cascade/: __init__.py  action.py  idle.py
clanker_soul/eventlog/: __init__.py  protocol.py  records.py  sqlite.py
clanker_soul/examples/: __init__.py  reference_host.py
clanker_soul/governor/: __init__.py  assessment.py  context.py  crisis.py  gate.py  levels.py
clanker_soul/physics/: __init__.py  config.py  contemplation.py  engine.py  math.py  tick.py
clanker_soul/plugins/: __init__.py  loader.py  manifest.py  master.py
clanker_soul/pulse/: __init__.py  config.py  contemplation_defaults.py  corpus.py  corpus_defaults.py  corpus_store.py  dispatcher.py  engine.py  host.py  prompt.py  triggers.py
clanker_soul/soul/: __init__.py  reservoirs.py  state.py  store.py
clanker_soul/tools/: __init__.py  calibrate_face.py
clanker_soul/ui/: __init__.py  app.py  config.py  events.py  live.py  simulator.py
docs/: host-integration.md  plugins.md
docs/research/: m4_action_tendencies.md  m4_failure_response_matrix.md  m4_thought_content_corpus.md
docs/specs/: 2026-05-10-tool-failure-attribution-design.md  2026-05-10-tool-failure-response-cascade-design.md  2026-05-11-config-api-and-labels-design.md
examples/: 01_minimal.py  02_async_host.py  03_custom_event_sink.py  04_pulse_host.py  05_m4_idle_cascade.py  README.md
integrations/hermes/: EVIDENCE.md  EVIDENCE_M3.2.md  EVIDENCE_M3.3.md  EVIDENCE_M3.4.md  EVIDENCE_M4_FOUNDATION.md  EVIDENCE_M4_HERMES_LOCAL.md  EVIDENCE_PENDING.md  README.md  __init__.py  inference_health.py  plugin.yaml  pulse_runner.py  scorer.py
tests/: test_calibrate_face.py  test_cli.py  test_contemplation_corpus.py  test_eventlog_wiring.py  test_examples.py  test_felt_state.py  test_hermes_inference_failure.py  test_hermes_integration.py  test_hermes_pulse_outbound.py  test_inference_wiring.py  test_mistakes_physics.py  test_mistakes_plugin.py  test_mistakes_reservoir.py  test_overrides.py  test_pending_actions.py  test_phase1_integration.py  test_plugin.py  test_presets.py  test_pulse_corpus.py  test_pulse_corpus_branches_anchors.py  test_pulse_corpus_persistence.py  test_pulse_corpus_wiring.py  test_reference_host.py  test_score.py  test_soul.py  test_tool_health.py
tests/cascade/: test_action.py  test_idle.py
tests/eventlog/: test_eventlog.py  test_wiring.py
tests/governor/: test_assessment.py  test_capability_gate.py  test_context.py  test_crisis.py  test_levels.py  test_plugin_integration.py
tests/physics/: test_contemplate.py  test_physics.py
tests/plugins/: __init__.py  test_loader.py  test_manifest.py  test_master.py  test_reference_plugin.py
tests/pulse/: test_action_protocol.py  test_dispatcher.py  test_host_adapter.py  test_motivation_triggers.py  test_pulse.py
tests/soul/: test_schema.py  test_soul.py
tests/ui/: asgi.py  (+5 more)
(+28 files in other folders)
