[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clanker-soul"
version = "0.17.0"
description = "The 3-layer VADUGWI runtime: Soul / Mood / Conversational. Persistent emotional state for LLM agents."
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.10"
authors = [{ name = "deucebucket" }]
keywords = ["vadugwi", "clanker", "emotional-state", "llm-agent", "ai-personality"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
]
ui = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
  "httpx>=0.27",  # used by FastAPI's TestClient
  "python-multipart>=0.0.7",  # required by FastAPI's Form(...) handling
]

[project.urls]
Homepage = "https://github.com/deucebucket/clanker-soul"
"Engine (clanker)" = "https://github.com/deucebucket/clanker"

[project.scripts]
clanker-soul = "clanker_soul.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["clanker_soul*"]

[tool.setuptools.package-data]
# PEP 561 — ship the marker so downstream type checkers (mypy, pyright)
# pick up our annotations instead of treating them as Any.
clanker_soul = ["py.typed", "ui/templates/*.html", "ui/static/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
